@@ -1,3 +1,9 @@
+2012-08-13  Maxim Kuvyrkov  <maxim@codesourcery.com>
+
+        * include/atomic.h (atomic_exchange_and_add): Split into ...
+        (atomic_exchange_and_add_acq, atomic_exchange_and_add_rel): ... these.
+        New atomic macros.
+
 2012-05-09  Andreas Schwab  <schwab@linux-m68k.org>
 	    Andreas Jaeger  <aj@suse.de>
 
